config/postgrs-k8s-config.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgresdb-vol
          persistentVolumeClaim:
            claimName: postgres-volume-claim
      containers:
        - name: postgres-pod
          image: postgres:latest
          imagePullPolicy: Never
          ports:
            - name: postgres-port
              containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb-vol

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: "postgres-port"
  selector:
    app: postgres
