config/product-istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-vir-ser
spec:
  hosts:
#    - product-service
#    - product-service.default.svc.cluster.local
#    - 192.168.99.100
    - "*"
  gateways:
    - istio-default-gateway
  http:
    - match:
        - uri:
            prefix: /product
          headers:
            version:
              exact: v1
      route:
        - destination:
            host: product-service.default.svc.cluster.local
            port: 
               number: 9001
            subset: product-v1
      fault:
         delay:
            percentage:
               value: 10
            fixedDelay: 1m   
    - match:
        - uri:
            prefix: /product
          headers:
            version:
              exact: v2
      route:
        - destination:
            host: product-service.default.svc.cluster.local
            port: 
               number: 9001
            subset: product-v2
      fault:
         abort:
            percentage:
               value: 10
            httpStatus: 400
    - match:
        - uri:
            prefix: /product
      route:
        - destination:
            host: product-service.default.svc.cluster.local
            port: 
               number: 9001
            subset: product-v1
          weight: 30
        - destination:
            host: product-service.default.svc.cluster.local
            port: 
               number: 9001
            subset: product-v2
          weight: 70
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-des-rule
spec:
  host: "product-service.default.svc.cluster.local"
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: product-v1
      labels:
        app: product
        version: "v1"
    - name: product-v2
      labels:
        app: product
        version: "v2"
